discussion/kv_engine/185020/185020_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: CDC stream backfill with a dropped collection

Primarily add a test that includes a dropped collection in the
scanned history range. This highlighted a problem in the collections
ScanContext as with history enabled the scanAllVersions method will
return both the create and drop of a collection as separate system
events. The isLogicallyDeleted code now needs to be able to distinguish
the create and drop collection events so that a backfill can exclude
the create event if the collection is dropped.

Change-Id: Icd78e81e9106d7c7014e9e7caecf89a948960d24

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 16:15:21.000000000
Message: 
Uploaded patch set 5: New patch set was added with same tree, parent, and commit message as Patch Set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 16:15:54.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332674/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 16:42:11.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/827/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1821:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1825:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1829:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2890:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/827/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1821:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/827/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1005/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(774): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1005/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/798/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/798/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/798/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1115/ : FAILURE

Compile error at [2023-01-16T16:20:09.755Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1115/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/833/ : FAILURE

Compile error at [2023-01-16T16:17:30.303Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/833/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/819/ : FAILURE

Compile error at [2023-01-16T16:40:29.263Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/819/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/847/ : FAILURE

Compile error at [2023-01-16T16:37:01.569Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/847/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/838/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/838/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/848/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Missing stat:  ep_magma_value_separation_size from stat group 
[2023-01-16T16:30:48.287Z] Missing stat:  ep_magma_value_separation_size from stat group config
[2023-01-16T16:30:48.287Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7880 Test failed: `stats error" (missing stats)
[2023-01-16T16:30:48.287Z] (18 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/848/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/839/ : FAILURE

Compile error at [2023-01-16T16:33:43.124Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/839/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22207/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
